Deleted eTest eReport, moved beforesuit aftersuit to BaseTest

--- a/test-output/old/PageFactoryDemo/AdminDashboardPageTest.properties
+++ b/test-output/old/PageFactoryDemo/AdminDashboardPageTest.properties
@@ -1,1 +1,1 @@
-[SuiteResult context=LoginPageTest][SuiteResult context=CoursesPageTest][SuiteResult context=AdminDashboardPageTest]
+[SuiteResult context=AdminDashboardPageTest]
